<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp" android:textColor="#000000"
            android:fontFamily="sans-serif-light"
            android:textSize="@dimen/headline" android:id="@+id/textView2"/>
    <TextView
            android:text="@string/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="@dimen/subtitle" android:fontFamily="sans-serif-light"/>
    <EditText
            android:layout_width="@dimen/textboxWidth"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameText"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.495"
            android:hint="@string/username" android:textColor="#000000"
            android:textSize="@dimen/textboxes"
            android:textAlignment="center"/>
    <Button
            android:text="@string/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/mainLight"
            android:fontFamily="sans-serif" android:textSize="14sp" android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"/>
    <TextView
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/forgotButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="@dimen/subtitle" android:fontFamily="sans-serif-light"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/fingerprint"
            android:id="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            android:contentDescription="@string/fingerprint"/>
    <Button
            android:text="@string/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="84dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:textAllCaps="false" style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="#000000" android:textSize="@dimen/subtitle" android:fontFamily="sans-serif-light"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="96dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:textAllCaps="false" style="@style/Widget.AppCompat.Button.Borderless"
            android:fontFamily="sans-serif-light" android:textColor="@color/mainDark"
            android:textSize="@dimen/subtitle" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="@dimen/textboxWidth"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHighlight="@color/mainLight"
            android:ems="10"
            android:id="@+id/passwordText"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/password"
            android:textSize="@dimen/textboxes"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintHorizontal_bias="0.495"/>

</androidx.constraintlayout.widget.ConstraintLayout>