<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:backgroundTint="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg">

    <TextView
            android:text="@string/invalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/titleText" android:gravity="center"
            android:textColor="#000000" android:textSize="40sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/contentText" android:textColor="#000000"
            android:textAlignment="center" android:textSize="22sp" android:paddingTop="10sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/titleText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.333"
            android:gravity="center"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="281dp" app:srcCompat="@drawable/sad" android:id="@+id/emoji"
            android:cropToPadding="false"
            android:contentDescription="@string/emoji"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/contentText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/okay"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/okayButton"
            android:backgroundTint="@color/mainDark" android:textColor="#FFFFFF" android:textSize="20sp"
            android:paddingTop="20sp" android:paddingBottom="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emoji"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>